--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,13 @@
 
     <dependencies>
 
+        <!-- Local JAR Dependency -->
+        <dependency>
+            <groupId>com.jamhour</groupId>
+            <artifactId>CareersHarvester</artifactId>
+            <version>1.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.javacord</groupId>
             <artifactId>javacord</artifactId>
@@ -38,6 +45,7 @@
         </dependency>
 
     </dependencies>
+
     <repositories>
         <repository>
             <id>maven_central</id>
@@ -47,7 +55,9 @@
     </repositories>
 
     <build>
+
         <plugins>
+
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
@@ -55,13 +65,13 @@
                 <executions>
                     <execution>
                         <id>compile</id>
-                        <phase>compile</phase>
+                        <phase>process-sources</phase>
                         <goals>
                             <goal>compile</goal>
                         </goals>
                         <configuration>
                             <sourceDirs>
-                                <source>src/main/java</source>
+                                <source>src/main/kotlin</source>
                                 <source>target/generated-sources/annotations</source>
                             </sourceDirs>
                         </configuration>
@@ -78,36 +88,16 @@
                     <jvmTarget>${maven.compiler.target}</jvmTarget>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>default-compile</id>
-                        <phase>none</phase>
-                    </execution>
-                    <execution>
-                        <id>default-testCompile</id>
-                        <phase>none</phase>
-                    </execution>
-                    <execution>
-                        <id>compile</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>testCompile</id>
-                        <phase>test-compile</phase>
-                        <goals>
-                            <goal>testCompile</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <version>3.8.1</version> <!-- Specify a version -->
+                <configuration>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
-
-
 </project>
